2014-04-18

	* makewin32.sh: added -mthreads gcc option.

2014-04-18

	* libsylph/utils.[ch]
	  libsylph/mh.c
	  libsylph/procheader.c
	  libsylph/socket.c
	  src/addrcache.c
	  src/compose.c
	  src/template.c
	  src/addrbook.c
	  src/jpilot.c: replaced 'struct stat' passed to g_*stat() with
	  GStatBuf, which will be defined as struct _stat32 (win32) or
	  struct stat.

2014-04-18

	* configure.in: added -lgtkmacintegration check.
	* src/compose.c
	  src/addressbook.c
	  src/gtkutils.c
	  src/addr_compl.c: applied OS X fixes.

2014-04-18

	* libsylph/utils.[ch]
	  libsylph/procheader.c
	  libsylph/procmsg.h
	  libsylph/procheader.h
	  libsylph/folder.[ch]
	  libsylph/pop.h
	  libsylph/session.h
	  src/addrcache.h
	  src/jpilot.h
	  configure.in: wrapped time_t as stime_t. stime_t will be 32-bit
	  on win32 for backward compatibility.
	* configure.in: enable silent rules by default.
	* autogen.sh: use newer aclocal and automake.

2014-04-11

	* libsylph/folder.c:
	  folder_build_tree()
	  folder_write_list_recursive(): fixed a bug that new/unread/total
	  numbers in folderlist.xml was corrupted if sizeof(time_t) is 8 on
	  32-bit (such as recent version of mingw32).

2014-04-10

	* libsylph/libsylph-0.def
	  libsylph/Makefile.am
	  src/Makefile.am
	  src/libsylpheed-plugin-0.def
	  configure.in
	  makewin32.sh: modified for newer MinGW environment. Fixed linking.

2014-04-09

	* macosx/bundle/launcher.sh
	  macosx/bundle/sylpheed.bundle: include pango library.
	  Fixed launcher.sh bug which creates an empty (langname) file.
	* macosx/bundle/Info-sylpheed.plist: updated version.

2014-04-04

	* version 3.4.1

2014-04-04

	* libsylph/pop.c: fixed return value check of pop3_retr_recv(),
	  pop3_getrange_stat_recv() and pop3_getrange_last_recv().
	  This fixes Bug #193: Lose mails when mailbox is inaccessible.

2014-03-26

	* version 3.4.0

2014-03-26

	* updated copyright year.
	* configure.in: increased library version.

2014-03-24
