@@ -1,5 +1,15 @@
 2014-04-18
 
+	* libsylph/utils.c
+	  libsylph/procheader.c
+	  libsylph/pop.c
+	  libsylph/mbox.c
+	  libsylph/imap.c
+	  plugin/attachment_tool/attachment_tool.c: workaround for 64-bit
+	  time_t on win32.
+
+2014-04-18
+
 	* makewin32.sh: added -mthreads gcc option.
 
 2014-04-18
